# st_intro_ml

./: README.md  app.py  configuration.py  pyproject.toml
data/: pca_tsne.npy  pca_tsne2.npy  tsne.npy
pages_list/: clustering.py  intro.py  visual.py
