[tool.poetry]
name = "st-intro-ml"
version = "0.1.0"
description = ""
authors = ["Rinat <sharafetdinvo42@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
streamlit = "^1.31.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
nbformat = "^5.9.2"
seaborn = "^0.13.2"
bokeh = "2.4.3"
streamlit-option-menu = "^0.3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
